--- a/prkym/prkym.csproj
+++ b/prkym/prkym.csproj
@@ -18,6 +18,6 @@
     <PackageReference Include="MySqlConnector" Version="0.61.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Compile Remove="Services\AzureDataStore.cs" />
   </ItemGroup>
 </Project>
